--- a/style/style.css
+++ b/style/style.css
@@ -162,3 +162,38 @@ body {
   margin: 0 auto;
 }
 /* section end here */
+/* main nenu start */
+.main_one h1 {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.main_one q {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.7;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.main_one,
+q > span {
+  color: #2f3542;
+  font-weight: 800;
+  /* margin-bottom: 60px; */
+}
+.inspire_me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
