--- a/style/style.css
+++ b/style/style.css
@@ -196,4 +196,91 @@ q > span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 100px;
+}
+.main_two h1 {
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono";
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.main_two p {
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-top: 24px;
+  margin-bottom: 48px;
+}
+.frame_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.main_frame_one {
+  width: 364px;
+  height: 299px;
+  border-radius: 16px;
+  background: rgba(255, 76, 30, 0.05);
+  padding: 40px;
+}
+.main_frame_heading {
+  position: static;
+  width: 284px;
+  height: 219px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 0px;
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  /* margin: 32px 10px; */
+}
+
+.btn_frame {
+  border: none;
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background: rgba(255, 76, 30, 0.05);
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration-line: underline;
+}
+
+.main_frame_two {
+  width: 364px;
+  height: 299px;
+  border-radius: 16px;
+
+  background: rgba(0, 76, 232, 0.05);
+  padding: 40px;
+}
+.main_frame_three {
+  width: 364px;
+  height: 299px;
+  border-radius: 16px;
+  padding: 40px;
+  background: rgba(255, 223, 0, 0.05);
 }
