--- a/style/style.css
+++ b/style/style.css
@@ -32,11 +32,13 @@ body {
   justify-items: center;
   align-items: center;
   margin: 0 auto;
-  padding: 26px 221px 44px 221px;
+
+  /* padding: 26px 221px 44px 221px; */
 }
 .hero_bg_img {
   width: 240.28px;
   height: 240px;
+  margin-top: 40px;
 }
 .hero_bg_title {
   width: 998px;
@@ -44,18 +46,20 @@ body {
   font-weight: 800;
   font-size: 48px;
   text-align: center;
+  margin-top: 40px;
 }
 .hero_bg_text {
   width: 950px;
   height: 52px;
   text-align: center;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 .btn_primary {
   margin: 20px auto;
   padding: 15px 20px;
   border-radius: 8px;
-
+  margin-bottom: 30px;
   background: rgb(13, 19, 33);
 }
 .main_text {
@@ -304,3 +308,61 @@ q > span {
   border-radius: 8px;
   transition: 0.1s;
 }
+/* footer start here */
+.target {
+  margin-top: 110px;
+}
+.target h1 {
+  width: 852px;
+  height: 37px;
+  margin-top: 30px;
+  margin: 24px 0px;
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+
+  text-align: center;
+  margin: 0 auto;
+}
+.target p {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-top: 15px;
+}
+.react_framework {
+  margin-top: 70px;
+  display: flex;
+  flex-direction: row;
+  /* margin-bottom: 10px; */
+  box-sizing: border-box;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 16px;
+  padding: 40px;
+  background: rgb(255, 255, 255);
+}
+.react_framework img {
+  margin-left: 60px;
+  width: 120px;
+  height: 110px;
+}
+.react_content h1 {
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono";
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 36px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.react_content {
+  margin-left: 25px;
+}
+
+/* footer end here */
