--- a/style/style.css
+++ b/style/style.css
@@ -416,6 +416,7 @@ q > span {
   width: 92%;
   height: 100%;
   padding: 1%;
+  background-image: linear-gradient(360deg rgba(34, 47, 62, 1));
 }
 .div_final {
   background-image: url(./assets/handshake.jpg);
@@ -528,6 +529,15 @@ q > span {
   justify-content: space-between;
   align-items: center;
   padding: 0px;
+}
+.icon_last img:hover {
+  size: 50px;
+  color: whitesmoke;
+  padding: 5px;
+  border-radius: 5px;
+  border-radius: 2px;
+  background-color: #f5322b;
+  transition: 0.5s;
 }
 
 /* footer end here */
